--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       content="Ichiban Ichiba is a e-commerce web application where you can order various types of electronics, gadgets, clothes, goods and etc."
     />
     <title>Ichiban Ichiba: A Paradise For Shopping</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
     <div id="root"></div>
